# StudyFlow-Assistant

./: README.md
CORE/: main.py
cpp(UI with qt creator)/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
proj/: mainwindow.cpp  mainwindow.h
